# self-ml

./: .gitignore  .gitmodules  README  README.selfml  index.html
Documentation/: Rationales.txt
Implementations/C/Projects/Xcode/: main.c  self-ml.1
Implementations/C/Projects/Xcode/self-ml.xcodeproj/: project.pbxproj
Implementations/C/Source/: self-ml.c  self-ml.h
Implementations/Haskell/: self-ml.cabal
Implementations/Haskell/Data/: SelfML.hs
Implementations/Haskell/Data/SelfML/: Parser.hs  SelfPath.hs  WithComments.hs
Implementations/Haskell/Data/SelfML/SelfPath/: Parser.hs
Implementations/Haskell/Data/SelfML/WithComments/: Parser.hs
Implementations/JavaScript/: SelfML.js
Implementations/Objective-C/: SFONode.h  SFONode.m  SFONodeChild.h  SFONodeChild.m
Implementations/Objective-C/Projects/Xcode/: self-ml_Prefix.pch  testml.m
Implementations/Objective-C/Source/: SFONode.h  SFONode.m  SFONodeChild.h  SFONodeChild.m
Implementations/Ruby/lib/: selfml.rb
Implementations/Ruby/lib/selfml/: ast.rb  parser.rb
Implementations/Ruby/spec/fixtures/: output.basic.selfml  output.strings.selfml
Implementations/ruby-lang/: .gitignore  README.markdown  testing.rb
Implementations/ruby-lang/lib/selfml/: transformer.rb
Implementations/ruby-lang/spec/: spec_helper.rb
Implementations/ruby-lang/spec/fixtures/: comments.selfml  strings.selfml
Testing/: test.hs  test.js  test.py
Testing/Outputs/: output.comments.selfml  output.strings.selfml
Testing/Testcases/: basic.selfml  comments.selfml  strings.selfml
(+6 files in other folders)
